-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
QO 2022-02-21, QO 2022-03-07, QO 2022-03-21, QO 2022-04-04, QO 2022-04-18
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Parse warning
A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
/src/mongo/db/query/optimizer/props.cpp:218: PW.USELESS_TYPE_QUALIFIER_ON_RETURN_TYPE 121467 type qualifier on return type is meaningless