SERVER-63413 Coverity analysis defect 121467: Parse warning